--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -1,6 +1,8 @@
 $main-color: rgba(0,237,0,255);
-$main-color-hover: rgba(0,215,0,255);
-$main-font:Georgia, "Times New Roman", Times, serif;
+$main-color-opacity: rgba(0,237,0,0.8);
+$main-color-hover: rgba(100,100,100,0.8);
+$main-color2: rgba(70,70,70,0.8);
+$main-font: 'Lato',Georgia, "Times New Roman", Times, serif;
 $logo-SVG: url("./components/images/ultraTreningLogo1.svg") ;
 $logo-SVG2: url("./components/images/ultraTreningLogo2.svg");
 $backgroundMain1-SVG: url("./components/images/backgroundMain1.svg");
@@ -8,6 +10,16 @@ $backgroundMain2-SVG: url("./components/images/backgroundMain2.svg");
 $backgroundsection2-SVG: url("./components/images/backgroundsection2.svg");
 $backgroundsection4-SVG: url("./components/images/backgroundsection4.svg");
 $broadBelt-SVG: url("./components/images/roadBelt.svg");
+
+//advantage dots
+$advantageCalendar-SVG: url("./components/images/advantageCalendar.svg");
+$topShape-SVG: url("./components/images/topShape.svg");
+$exerciseType-SVG: url("./components/images/exerciseType.svg");
+$page-SVG: url("./components/images/page.svg");
+$weight-SVG: url("./components/images/weight.svg");
+$diagram-SVG: url("./components/images/diagram.svg");
+$leisureTime-SVG: url("./components/images/leisureTime.svg");
+$periods-SVG: url("./components/images/periods.svg");
 
 $break-to-adv-SVG: url("./components/images/break-to-adv.svg");
 $break-to-enco-SVG: url("./components/images/break-to-enco.svg");
