--- a/src/scss/partials/_homeStyle.scss
+++ b/src/scss/partials/_homeStyle.scss
@@ -4,8 +4,8 @@
 //STYLING FIRST SECTION
 .home-class{
   height: 100vh;
-  background-image: $backgroundMain2-SVG;
-  background-color: black;
+  background-image: $backgroundMain1-SVG;
+  background-color: rgba(221, 220, 221,0.5);
   background-size: contain;
 }
 .welcome-text-cnt{
@@ -15,17 +15,21 @@
   .welcome-text{
     width:100%;
     margin: 26vh auto auto auto;
+    font-weight: bold;
+
     // border:1px solid blue;
-    p{
+    .welcome-text-top{
       margin: auto auto auto 20px;
       font-size: 6vh;
       font-weight: bold;
-      font: $main-font;
       color:white;
+      background-color: rgba(0,237,0,0.75);
+      border-radius: 10px;
+      padding: 15px;
     }
     .welcome-btn{
-      margin: 18vh auto auto auto;
-      background-color: $main-color;
+      margin: 8vh auto auto auto;
+      background-color: $main-color2;
       width:50vw;
       height:10vh;
       display:flex;
@@ -35,6 +39,7 @@
       text-transform: uppercase;
       font-size: 3vh;
       font-weight: bold;
+      font-family: $main-font;
       &:hover{
         background-color: $main-color-hover
       }
@@ -63,17 +68,18 @@
 
 #welcome-encourage-break{
   margin-top: -3px;
+  margin-bottom: -3px;
   height: 10vh;
-  background-image: $break-to-enco-SVG;
+  background-image: $break-to-encoMobile-SVG;
   background-size: cover;
 }
 
 #encourage-advantage-break{
-  margin-bottom: -3px;
   height: 10vh;
   background-position: center;
-  background-image: $break-to-adv-SVG;
+  background-image: $break-to-advMobile-SVG;
   background-size: cover;
+
 }
 
 //SECTION 2 STYLING
@@ -82,8 +88,8 @@
   height: 60vh;
 }
 #encourage-entry{
-  background-image: $backgroundsection2-SVG;
-  background-color: white;
+  // background-image: $backgroundsection2-SVG;
+  background-color: $main-color;
   background-size: contain;
   background-attachment: fixed;
 }
@@ -100,15 +106,15 @@
     margin: auto auto auto 20px;
     font-size: 40px;
     font-weight: bold;
-    font: $main-font;
       @for $i from 0 through 3 {
       .moving-numbers#{$i}{
+        background-color: white;
         display: flex;
         justify-content: center;
         align-items: center;
         font-weight: bold;
         text-transform: lowercase;
-        color:$main-color;
+        color:black;
         font-size: 25px+(15px*$i);
         width:120px;
         height:50px;
@@ -128,7 +134,7 @@
       justify-content: center;
       align-items: center;
       color: white;
-      background-color: $main-color;
+      background-color: black;
       border-radius: 10px;
       margin-top: 30px;
       // border:3px solid black;
@@ -143,78 +149,75 @@
 //SECTION 3 STYLING
 
 .advantage-class{
-  height: 120vh;
-  background-image: $backgroundMain1-SVG;
-  background-color: $main-color;
-  background-size: contain;
+  height: 150vh;
 }
 
-.advantage-cnt{
-  border:1px solid blue;
+.advantage-main-title{
+  height:10vh;
+  width: 82vw;
+  font-size: 6vh;
+  // border:1px solid black;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // text-transform: uppercase;
+}
+.advantage-point{
+  // border:1px solid orange;
+  // height:13vh;
+  margin-top: 10px;
+  width:100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  @for $i from 1 through 8 {
+    .advantage-pic-no#{$i}{
+      background-color: $main-color;
+      border-radius:50%;
+      margin-top: 2px;
+      height:70px;
+      width:70px;
+      background-position: center;
+      background-size: 40px 40px;
+      background-repeat: no-repeat;
+      @if $i == 1{
+        background-image: $advantageCalendar-SVG;
+      } @else if $i == 2{
+        background-image: $topShape-SVG;
+      } @else if $i == 3{
+        background-image: $diagram-SVG;
+      } @else if $i == 4{
+        background-image: $page-SVG;
+      } @else if $i == 5{
+        background-image: $weight-SVG;
+      } @else if $i == 6{
+        background-image: $exerciseType-SVG;
+      } @else if $i == 7{
+        background-image: $leisureTime-SVG;
+      } @else if $i == 8{
+        background-image: $periods-SVG;
+      }
+      }
+  }
   .advantage-title{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    margin-top: 15px;
-    height:10vh;
-    width:96%;
-    font-size: 3vh;
-    text-transform: uppercase;
+    // margin-top: 2px;
+    // margin-left: 6px;
+    // border:1px solid black;
+    // height:12vh
+    margin-left: 7px;
+    width:63vw;
+    font-size:5vh;
     font-weight: bold;
     font-style: $main-font;
-    background-color: black;
+    .advantage-text{
+      font-size: 12px;
+      font-style: $main-font;
+      font-weight: bold;
+    }//adv text
   }
-  .advantage-text{
-    border:1px solid red;
-    margin-bottom: 14px;
-    .advantage-point{
-      border:1px solid orange;
-      height:13vh;
-      width:100%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      .advantage-text-no{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: black;
-        background-color: white;
-        border-radius:50%;
-        margin-top: 2px;
-        border:3px solid black;
-        padding: 5px;
-        height:12vh;
-        width:12vh;
-        font-size: 40px;
-        font-style: $main-font;
-      }
-      .advantage-text{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: black;
-        background-color: white;
-        border-radius: 10px;
-        margin-top: 2px;
-        margin-left: 4px;
-        border:3px solid black;
-        padding: 5px;
-        height:12vh;
-        width:60vw;
-        font-size: 22px;
-        font-style: $main-font;
-        font-weight: bold;
-        text-transform: uppercase;
-      }
-    }
-
-  }
-}
+}//adv point
 
 // SECTION 4 BREAKING DIVS
 #advantage-chain-break{
@@ -235,11 +238,15 @@
   // height: 200vh;
   // background-image: $backgroundsection4-SVG;
   // background-size: contain;
+  background-attachment: fixed;
+  background-color: 	rgba(230, 230, 230,0.8);
+  background-image: $backgroundMain1-SVG;
+
 }
 #chain-title{
   background-color: black;
   color:white;
-  height:15vw;
+  height:35vw;
   font-size: 50px;
   display: flex;
   justify-content: center;
@@ -248,66 +255,60 @@
 
 }
 .chain-cnt{
-  background-attachment: fixed;
-  @include linearGradientEf(90deg,$main-color,$main-color 1px,#ffffff 1px,#ffffff 10px);
-
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  text-transform: uppercase;
-  border: 1px solid green;
+  // border: 1px solid green;
   .chain-all-links{
-    font-weight: 600;
-    color: black;
-    width:50vh;
-    height: 50vh;
-    font-size: 16px;
-    background-color: black;
-    border: 1px solid red;
+    width:160px;
+    height:160px;
+    background-color: $main-color-opacity;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    flex-wrap: wrap;
-    border-radius: 175px;
+    align-items: center;
+    border-radius: 50%;
 
-    .chain-link-titles{
-      margin-top: 75px;
-      margin-bottom: 0px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      background-color: $main-color;
-      font-weight: 600;
+    .chain-link-no{
+      // opacity: 1;
+      // margin-top: 30px;
+      // border: 1px solid green;
+      // margin-bottom: 0px;
+      // display: flex;
+      // flex-wrap: wrap;
+      // justify-content: center;
+      // align-items: center;
+      font-weight: bold;
       color: white;
-      border-radius: 40px;
-      height: 9vh;
-      width:42vh;
-      font-size: 24px;
+      // height: 9vh;
+      // width:42vh;
+      font-size: 70px;
+
+    }
+    .chain-link-texts1{
+      font-size: 20px;
+      font-weight: bold;
+      text-align:center;
     }
     .chain-link-texts{
-      margin-bottom: 75px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-weight: 600;
-      color: black;
-      font-size: 2.2vh;
-      text-align: center;
-      width:42vh;
-      border-radius: 40px;
-      background-color: white;
-      // padding: 0.7vh;
+      // border: 1px solid green;
+
+      margin-bottom: 20px;
+      text-align:center;
+      font-weight: bold;
+      // color: white;
+      font-size: 22px;
     }
   }
 
   .link{
-    height: 12vh;
+    height: 4vh;
     width: 100%;
-    background-image: $broadBelt-SVG;
+    // background-image: $broadBelt-SVG;
     // background-color: $main-color;
     // background-size: contain;
-    background-position: center;
+    // background-position: center;
   }
 }
 
@@ -316,7 +317,7 @@
 
 .safety-class{
   height: 40vh;
-  background-color: black;
+  // background-color: black;
 }
 .safety-cnt{
   display: flex;
@@ -324,7 +325,7 @@
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
-  border: 1px solid green;
+  // border: 1px solid green;
   .safety-title{
     display: flex;
     justify-content: center;
@@ -332,7 +333,7 @@
     height: 10vh;
     font-size: 23px;
     font-weight: 600;
-    color: white;
+    // color: white;
   }
   .safety-text{
     margin-top: 0.5vh;
