--- a/src/App.css
+++ b/src/App.css
@@ -1326,11 +1326,16 @@
   justify-content: center;
   flex-direction: column; }
   .notEnoughTimeToPrepareWarningDiv .areyousure-txt {
-    font-size: 8vw;
+    font-size: 38px;
     font-weight: bold;
     color: #fafafa; }
+    .notEnoughTimeToPrepareWarningDiv .areyousure-txt p {
+      margin-left: 8vw; }
+      @media (min-width: 960px) {
+        .notEnoughTimeToPrepareWarningDiv .areyousure-txt p {
+          margin-left: 0; } }
   .notEnoughTimeToPrepareWarningDiv .return-fillInForm-btn {
-    font-size: 3vw;
+    font-size: 22px;
     font-weight: bold;
     color: white;
     margin: 40px 0 40px 0;
@@ -1344,7 +1349,7 @@
     background: -o-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%);
     background: -moz-linear-gradient(-10deg, #f00a0a, #f00a0a 47%, #e60a0a 50%, #e60a0a 100%); }
   .notEnoughTimeToPrepareWarningDiv .load-trainingPlan-btn {
-    font-size: 3vw;
+    font-size: 22px;
     font-weight: bold;
     color: white;
     margin: 40px 0 40px 0;
@@ -1369,7 +1374,11 @@
   margin-top: 46px;
   width: 95vw;
   background-color: rgba(0, 0, 0, 0.7);
-  color: #fdfdfd; }
+  color: #fdfdfd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; }
   @media (min-width: 600px) {
     #training-plan-cnt {
       width: 90vw; } }
@@ -1404,6 +1413,92 @@
   #training-plan-cnt #remove-tr-btn {
     top: 45vh;
     height: 70px; }
+  #training-plan-cnt #intro-user-cnt {
+    width: 80vw;
+    text-align: center;
+    vertical-align: middle; }
+    #training-plan-cnt #intro-user-cnt #user-name {
+      font-size: 25px;
+      margin-top: 16px;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 14px 5px; }
+      @media (min-width: 600px) {
+        #training-plan-cnt #intro-user-cnt #user-name {
+          font-size: 35px; } }
+    #training-plan-cnt #intro-user-cnt #user-bmi {
+      font-size: 14px;
+      margin-top: 16px;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 10px 5px; }
+      @media (min-width: 600px) {
+        #training-plan-cnt #intro-user-cnt #user-bmi {
+          font-size: 18px; } }
+      @media (min-width: 1200px) {
+        #training-plan-cnt #intro-user-cnt #user-bmi {
+          font-size: 25px;
+          margin-bottom: 24px; } }
+  #training-plan-cnt .training-day {
+    margin: 10px 0 10px 0;
+    width: 85vw;
+    height: 114px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; }
+    #training-plan-cnt .training-day .initial-no-cnt {
+      width: 65px;
+      height: 114px;
+      text-align: center;
+      vertical-align: middle; }
+      #training-plan-cnt .training-day .initial-no-cnt p {
+        padding: 10px 0 0px 0;
+        height: 80px;
+        color: #fafafa;
+        font-size: 35px;
+        background: repeating-linear-gradient(-18deg, #00be00, #00be00 47%, #00e600 50%, #00e600 100%);
+        background: -webkit-linear-gradient(-18deg, #00be00, #00be00 47%, #00e600 50%, #00e600 100%);
+        background: -o-linear-gradient(-18deg, #00be00, #00be00 47%, #00e600 50%, #00e600 100%);
+        background: -moz-linear-gradient(-18deg, #00be00, #00be00 47%, #00e600 50%, #00e600 100%);
+        display: flex;
+        flex-direction: column; }
+      #training-plan-cnt .training-day .initial-no-cnt span {
+        margin: -3px 0 0px 0;
+        font-size: 18px; }
+      #training-plan-cnt .training-day .initial-no-cnt p:last-child {
+        margin-top: 3px;
+        height: 32px;
+        font-size: 11px;
+        font-weight: bold;
+        background: repeating-linear-gradient(-18deg, black, black 47%, #282828 50%, #282828 100%);
+        background: -webkit-linear-gradient(-18deg, black, black 47%, #282828 50%, #282828 100%);
+        background: -o-linear-gradient(-18deg, black, black 47%, #282828 50%, #282828 100%);
+        background: -moz-linear-gradient(-18deg, black, black 47%, #282828 50%, #282828 100%); }
+    #training-plan-cnt .training-day .decription-cnt {
+      font-size: 15px;
+      display: flex;
+      flex-direction: column;
+      padding: 3px 0px 0px 4px;
+      height: 117px;
+      width: 225px;
+      margin-left: 7px;
+      background: repeating-linear-gradient(-18deg, #141414, #141414 47%, #282828 50%, #282828 100%);
+      background: -webkit-linear-gradient(-18deg, #141414, #141414 47%, #282828 50%, #282828 100%);
+      background: -o-linear-gradient(-18deg, #141414, #141414 47%, #282828 50%, #282828 100%);
+      background: -moz-linear-gradient(-18deg, #141414, #141414 47%, #282828 50%, #282828 100%); }
+      @media (min-width: 600px) {
+        #training-plan-cnt .training-day .decription-cnt {
+          width: 400px;
+          font-size: 18px; } }
+      @media (min-width: 1200px) {
+        #training-plan-cnt .training-day .decription-cnt {
+          width: 700px;
+          font-size: 21px;
+          padding: 6px 0px 0px 6px;
+          margin-left: 14px; } }
+      @media (min-width: 1440px) {
+        #training-plan-cnt .training-day .decription-cnt {
+          width: 820px;
+          padding: 6px 0px 0px 10px;
+          margin-left: 19px; } }
 
 * {
   padding: 0px;
