--- a/src/scss/partials/_fillInFormStyle.scss
+++ b/src/scss/partials/_fillInFormStyle.scss
@@ -371,12 +371,18 @@
   justify-content: center;
   flex-direction: column;
   .areyousure-txt{
-    font-size: 8vw;
+    font-size: 38px;
     font-weight: bold;
-    color: rgba(250,250,250,1)
+    color: rgba(250,250,250,1);
+    p{
+      margin-left: 8vw;
+      @include mobile2{
+        margin-left: 0;
+      };
+    }
   }
   .return-fillInForm-btn{
-    font-size: 3vw;
+    font-size: 22px;
     // text-transform: uppercase;
     font-weight: bold;
     color: rgba(255,255,255,1);
@@ -391,7 +397,7 @@
 
   }
   .load-trainingPlan-btn{
-    font-size: 3vw;
+    font-size: 22px;
     // text-transform: uppercase;
     font-weight: bold;
     color: rgba(255,255,255,1);
