--- a/src/scss/partials/_trainingPlanStyle.scss
+++ b/src/scss/partials/_trainingPlanStyle.scss
@@ -7,8 +7,8 @@
   flex-wrap: wrap;
   align-items: center;
   flex-direction: column;
-  // justify-content: center;
   background-image: $backgroundMain1-SVG;
+
 }
 
 #training-plan-cnt{
@@ -18,6 +18,10 @@
   // margin: 48px 10vw 0vh 10vw;
   background-color: rgba(0,0,0,0.7);
   color: rgba(253,253,253,1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   @include mobile{
     width: 90vw;
 
@@ -55,5 +59,97 @@
     top:45vh;
     height:70px;
   }
+  #intro-user-cnt{
+    width: 80vw;
+    text-align: center;
+    vertical-align: middle;
+    // padding: 8px 5px 8px 5px;
+    #user-name{
+      font-size: 25px;
+      margin-top: 16px;
+      background-color: rgba(0,0,0,0.6);
+      padding: 14px 5px;
+      @include mobile{
+        font-size: 35px;
+      };
+    }
+    #user-bmi{
+      font-size: 14px;
+      margin-top: 16px;
+      background-color: rgba(0,0,0,0.6);
+      padding: 10px 5px;
+      @include mobile{
+        font-size: 18px;
+      };
+      @include laptop{
+        font-size: 25px;
+        margin-bottom: 24px;
+      };
+    }
+  }
+  .training-day{
+    // border: 1px solid yellow;
+    margin: 10px 0 10px 0;
+    width: 85vw;
+    height: 114px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    .initial-no-cnt{
+      // border: 1px solid red;
+      width: 65px;
+      height: 114px;
+      // background-color: yellow;
+      text-align: center;
+      vertical-align: middle;
+      p{
+        padding: 10px 0 0px 0;
+        height: 80px;
+        color: rgba(250,250,250,1);
+        font-size: 35px;
+        @include linearGradientEf(-18deg,rgba(0,190,0,1),rgba(0,190,0,1) 47%,rgba(0,230,0,1) 50%,rgba(0,230,0,1) 100%);
+        display: flex;
+        flex-direction: column;
+      }
+      span{
+        margin: -3px 0 0px 0;
+        font-size: 18px;
+      }
+      p:last-child{
+        margin-top: 3px;
+        height: 32px;
+        font-size: 11px;
+        font-weight: bold;
+        @include linearGradientEf(-18deg,rgba(0,0,0,1),rgba(0,0,0,1) 47%,rgba(40,40,40,1) 50%,rgba(40,40,40,1) 100%);
+      }
+    }//.initial-no-cnt
+    .decription-cnt{
+      font-size: 15px;
+      display: flex;
+      flex-direction: column;
+      padding: 3px 0px 0px 4px;
+      height: 117px;
+      // border: 1px solid blue;
+      width:225px;
+      margin-left: 7px;
+      @include linearGradientEf(-18deg,rgba(20,20,20,1),rgba(20,20,20,1) 47%,rgba(40,40,40,1) 50%,rgba(40,40,40,1) 100%);
+      @include mobile{
+        width:400px;
+        font-size: 18px;
+      };
+      @include laptop{
+        width:700px;
+        font-size: 21px;
+        padding: 6px 0px 0px 6px;
+        margin-left: 14px;
+      };
+      @include desktop{
+        width:820px;
+        padding: 6px 0px 0px 10px;
+        margin-left: 19px;
+      };
+    }
+  }//training-day
 
-}
+
+}//#training-plan-cnt
