--- a/src/App.css
+++ b/src/App.css
@@ -1005,51 +1005,44 @@
   background: -moz-linear-gradient(-10deg, black, black 47%, #282828 50%, #282828 100%); }
 
 .select-cnt {
-  border: 1px solid blue;
   width: 100vw;
   height: 9vh;
   background-color: rgba(30, 30, 30, 0.4);
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; }
   @media (min-width: 768px) {
     .select-cnt {
       height: 47px;
       width: 800px; } }
   .select-cnt .descr-select {
-    border: 1px solid red;
-    width: 20vw;
-    height: 100%;
+    width: 100vw;
     text-align: center;
-    vertical-align: middle;
-    padding-top: 6px;
+    vertical-align: sub;
+    padding-top: 3px;
     font-size: 20px; }
     @media (min-width: 768px) {
       .select-cnt .descr-select {
-        width: 400px; } }
-  .select-cnt label {
+        width: 398px;
+        height: 3.7vh; } }
+  .select-cnt #select-options-cnt {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    align-items: center;
     justify-content: center;
-    align-items: center; }
-    .select-cnt label .input-CNT {
-      border: 1px solid pink;
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center; }
-      .select-cnt label .input-CNT input {
-        border: 1px solid white;
-        margin-left: 10px;
-        margin-bottom: 10px; }
-        @media (min-width: 768px) {
-          .select-cnt label .input-CNT input {
-            margin-top: 15px; } }
-      .select-cnt label .input-CNT .options-select {
-        font-size: 16px;
-        margin-left: 7px;
-        border: 1px solid yellow; }
+    width: 100vw; }
+    @media (min-width: 768px) {
+      .select-cnt #select-options-cnt {
+        width: 398px;
+        height: 3.7vh; } }
+    .select-cnt #select-options-cnt input {
+      margin-left: 10px;
+      margin-top: 4px; }
+    .select-cnt #select-options-cnt .options-select {
+      font-size: 16px;
+      margin-left: 7px; }
   .select-cnt .single-down-error-FIF-active {
     text-align: center;
     width: 100%;
