--- a/src/scss/partials/fillInForm-partials/_selectSection.scss
+++ b/src/scss/partials/fillInForm-partials/_selectSection.scss
@@ -3,60 +3,55 @@
 @import "../../modules/mediaQueryMixins";
 
 .select-cnt{
-  border:1px solid blue;
-
+  // border:1px solid blue;
   width: 100vw;
   height: 9vh;
   background-color: rgba(30,30,30,0.4);
   display: flex;
   flex-wrap: wrap;
   // flex-direction: column;
-  // justify-content: center;
-  // align-items: center;
+  justify-content: center;
+  align-items: center;
   @include tablet{
     height: 47px;
     width: 800px;
   };
   .descr-select{
-    border:1px solid red;
-    width: 20vw;
-    height: 100%;
+    // border:1px solid red;
+    width: 100vw;
+    // height: 100%;
     text-align: center;
-    vertical-align: middle;
-    padding-top:  6px;
+    vertical-align: sub;
+    padding-top:  3px;
     font-size: 20px;
     @include tablet{
-      width: 400px;
-      // margin-top: 10px;
+      width: 398px;
+      height: 3.7vh;
     };
   }
-  label{
+  #select-options-cnt{
+    // border:1px solid pink;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
-    .input-CNT{
-      border:1px solid pink;
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
+    justify-content: center;
+    width: 100vw;
+    @include tablet{
+      width: 398px;
+      height: 3.7vh;
+    };
       input{
-        border:1px solid white;
+        // border:1px solid white;
         margin-left: 10px;
-        margin-bottom: 10px;
-        @include tablet{
-          margin-top: 15px;
-        };
+        margin-top:4px;
       }
       .options-select{
         font-size: 16px;
         margin-left: 7px;
-        border:1px solid yellow;
+        // border:1px solid yellow;
       }
-    }
+    // }
   }
 
 
