--- a/src/App.css
+++ b/src/App.css
@@ -1466,8 +1466,9 @@
 .fullScreenInfo-CNT {
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
   position: absolute;
   z-index: 50;
   background-color: rgba(0, 0, 0, 0.6);
