--- a/src/scss/partials/common-partials/_fullScreenWarningsStyles.scss
+++ b/src/scss/partials/common-partials/_fullScreenWarningsStyles.scss
@@ -5,9 +5,9 @@
 .fullScreenInfo-CNT{
   top:0;
   left:0;
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
+  width: 100%;
+  height: 100%;
+overflow-y:scroll;  position: absolute;
   z-index: 50;
   background-color: rgba(0,0,0,0.6);
   display: flex;
